k8s/send/send.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: send

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: send
  namespace: send
spec:
  replicas: 1
  selector:
    matchLabels:
      app: send
  template:
    metadata:
      labels:
        app: send
    spec:
      nodeName: charlie
      containers:
      - name: send
        image: registry.gitlab.com/timvisee/send:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: webui
          containerPort: 1443
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        hostPath:
          path: /mnt/bulk/k8s/send

---
apiVersion: v1
kind: Service
metadata:
  name: send
  namespace: send
spec:
  type: LoadBalancer
  selector:
    app: send
  ports:
  - name: webui
    port: 80
    targetPort: webui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: send
  namespace: send
spec:
  ingressClassName: nginx
  rules:
    - host: send.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  send
                port:
                  number: 80
